mac 19 Dec last push

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,14 @@
                                 <li class="nav-item"><a class="nav-link" href="/course/create_new_course">Create New Course</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Learners">Learners</a>
+                            <ul class="nav flex-column ml-3">
+                                <li class="nav-item"><a class="nav-link" href="/learners/view_learners">View Learners</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/learners/view_activities">View Activity</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/learner">Go To Learner View</a></li>
+                            </ul>
+                        </li>
                         <!-- Repeat for other menu items -->
                     </ul>
                 </div>
