--- a/templates/view_content.html
+++ b/templates/view_content.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Contents</h1>
-    <a href="{{ url_for('add_content') }}" class="btn btn-success mb-3">Create New Course</a>
+    <a href="{{ url_for('add_content') }}" class="btn btn-success mb-3">Add New Content</a>
     <table class="table">
         <thead>
             <tr>
