--- a/templates/learner_base.html
+++ b/templates/learner_base.html
@@ -7,6 +7,11 @@
     <title>{% block title %}Learner Home{% endblock %}</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     {% block stylesheets %}{% endblock %}
+    <style>
+        .content{
+            margin-top: 70px;
+        }
+    </style>
 </head>
 
 <body>
