--- a/templates/login.html
+++ b/templates/login.html
@@ -76,7 +76,7 @@
             <button><img src="google_icon.png" alt="Google"></button>
         </div>
         <div>
-            <a href="/signup">SIGN UP</a>
+            <a href="learner/signup">SIGN UP</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
