--- a/templates/learner_home.html
+++ b/templates/learner_home.html
@@ -63,7 +63,7 @@
             {% for course in courses %}
             <div class="col-md-4">
                 <div class="card course-card">
-                    <img class="card-img-top" src="course_image.jpg" alt="Course Image">
+                    <img class="card-img-top" src="{{ course.course_display_image }}" alt="Course Image">
                     <div class="card-body">
                         <h5 class="card-title">{{ course.title }}</h5>
                         <p class="card-text">{{ course.description }}</p>
