windows 20 Dec 6:44 PM

--- a/templates/edit_course.html
+++ b/templates/edit_course.html
@@ -168,12 +168,17 @@
         margin: 0 auto;
         /* This also helps in centering the content */
     }
+    video {
+            width: 100%;
+            height: auto;
+        }
 </style>
 {% endblock %}
 <!-- Add your meta tags, title, and CSS links -->
 
 
 {% block content %}
+<a href="{{ url_for('update_course', course_id=course.id) }}">Update Parent Course Details</a></td>
 <div class="container-box">
     <div class="box box-left">
         <div class="course-structure">
@@ -395,47 +400,63 @@
             .then(data => {
                 var formHtml = `
                 <form id="edit-content-form">
-                    <input type="hidden" name="content_id" value="${data.id}">
-                    <div>
-                        <label for="content_title">Content Title:</label>
-                        <input type="text" id="content_title" name="content_title" required value="${data.title}">
-                    </div>
-                    <div>
-                        <label for="content_text">Content Text:</label>
-                        <textarea id="content_text" name="content_text">${data.text}</textarea>
-                    </div>
-                    <div>
-                        
-                        <label for="type">Content Type:</label>
-                        <select id="type" name="type" value="${data.type}">
-                            <option value="Video">Video</option>
-                            <option value="Text">Text</option>
-                            <option value="PDF">PDF</option>
-                            <option value="PPT">PPT</option>
-                        </select><br></div>
-                    </div>
-                    <div><label for="preview"></label>
-                        <div class="file_preview"  style="max-width: 100%; height: auto; overflow: hidden;"></div>
-                        </div>
-                    <div><label for="file">File:</label>
-                            <input type="file" id="file" name="file"><br>
-                            ${data.file_link}</div>    
-                    <div>
-                    <div>
-                        <label for="mastery_score">Mastery Score:</label>
-                        <input type="text" name="mastery_score" value="${data.mastery_score}">
-                    </div>
-                    <div>
-                        <button type="button" onclick="submitEditContentForm()">Update</button>
-                    </div>
-                </form>
+    <input type="hidden" name="content_id" value="${data.id}">
+    <div>
+        <label for="content_title">Content Title:</label>
+        <input type="text" id="content_title" name="content_title" required value="${data.title}">
+    </div>
+    <div>
+        <label for="content_text">Content Text:</label>
+        <textarea id="content_text" name="content_text">${data.text}</textarea>
+    </div>
+    <div>
+        <label for="type">Content Type:</label>
+        <select id="type" name="type" value="${data.type}">
+            <option value="Video">Video</option>
+            <option value="Text">Text</option>
+            <option value="PDF">PDF</option>
+            <option value="PPT">PPT</option>
+        </select><br></div>
+    </div>
+    <div>
+        <label for="preview"></label>
+        <div class="file_preview" style="max-width: 100%; height: auto; overflow: hidden;"></div>
+    </div>
+    <div>
+        <label for="file">File:</label>
+        <input type="file" id="file" name="file"><br>
+        ${data.file_link}
+    </div>
+    ${data.videoLink ? `
+            <div>
+                <video controls>
+                    <source src="${data.videoLink}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        ` : ''}
+
+
+    <div>
+        <label for="videoLink">VideoLink:</label>
+        <input type="text" id="videoLink" name="videoLink"><br>
+        ${data.videoLink}
+    </div>
+    <div>
+        <label for="mastery_score">Mastery Score:</label>
+        <input type="text" name="mastery_score" value="${data.mastery_score}">
+    </div>
+    <div>
+        <button type="button" onclick="submitEditContentForm()">Update</button>
+    </div>
+</form>
             `;
                 document.querySelector('.edit-panel').innerHTML = formHtml;
                 const fileLink = data.file_link;
                 const fileLink_adj = fileLink.replace('static/', '')
                 const fileExtension = fileLink_adj.split('.').pop().toLowerCase();
 
-                console.log(fileLink_adj);
+                
                 let filePreview = '';
                 switch (fileExtension) {
                     case 'jpg':
